# envio

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  COMMANDS.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  REPO_DOCUMENTATION.md  SECURITY.md  envio_product_analysis.md  log.txt  main.py  next_steps.md  pyproject.toml  requirements.txt  setup_env.sh
.github/workflows/: ci.yml
agents/: bash_file_generator_agent.py  command_construction_agent.py  dependency_resolution_agent.py  nlp_agent.py
docs/: IMPROVEMENTS.md  PROGRESS.md  REPO_DOCUMENTATION.md  ROADMAP.md  plan.md
docs/internal/: next_steps.md
src/envio/: __init__.py  __main__.py  cli.py  cli_helpers.py  config.py
src/envio/agents/: __init__.py  command_construction_agent.py  dependency_resolution_agent.py  nlp_agent.py
src/envio/analysis/: __init__.py  import_analyzer.py  package_mapping.py  pattern_ai_query.py  pattern_version_cache.py  syntax_detector.py  version_inference.py
src/envio/commands/: __init__.py  activate.py  add.py  audit.py  config.py  doctor.py  export.py  init.py  install.py  list_envs.py  lock.py  migrate.py  prompt.py  remove.py  resurrect.py  supply_chain.py  sync.py
src/envio/core/: __init__.py  executor.py  registry.py  script_generator.py  system_profiler.py  virtualenv_manager.py
src/envio/llm/: __init__.py  client.py  parser.py  prompts.py
src/envio/project/: __init__.py  detector.py  manager.py  migrator.py
src/envio/resolution/: __init__.py  fast_resolver.py  self_healing.py
src/envio/supplychain/: __init__.py  analyzer.py  cache.py  detector.py  diff.py  hooks.py  osv.py  pinning.py  remediation.py  reputation.py  scanner.py  websearch.py
src/envio/tools/: __init__.py  package_lookup.py  serper_search.py
src/envio/ui/: __init__.py  console.py
src/envio/utils/: __init__.py  bash_executor.py  http_utils.py  paths.py  sanitize.py  version_utils.py
src/tests/: __init__.py  conftest.py  test_cli.py  test_config.py
src/tests/test_analysis/: test_import_analyzer.py  test_syntax_detector.py  test_version_inference.py
src/tests/test_commands/: __init__.py  test_activate.py  test_add.py  test_audit.py  test_cli_helpers.py  test_config.py  test_doctor.py  test_export.py  test_init.py  test_install.py  test_list_envs.py  test_lock.py  test_migrate.py  test_prompt.py  test_remove.py  test_resurrect.py  test_sync.py
src/tests/test_core/: test_executor.py  test_script_generator.py  test_system_profiler.py  test_virtualenv_manager.py
src/tests/test_llm/: test_client.py  test_parser.py
src/tests/test_resolution/: test_fast_resolver.py  test_self_healing.py
src/tests/test_utils/: __init__.py  test_sanitize.py
testing_env/: log.txt  log_20241008_193003.txt  log_20241008_195355.txt  log_20241011_000812.txt  log_20241011_001146.txt  setup_env.sh
testing_env/eemrush/: pyvenv.cfg
tools/: package_lookup.py  serper_search.py
utils/: bash_executor.py
