[project]
name = "envio-ai"
version = "0.3.2"
description = "AI-Native Environment Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gangadhar Kambhamettu" },
]
keywords = [
    "package-manager",
    "ai",
    "environment",
    "ml",
    "devops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.47.0,<=1.82.6",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "rich>=13.8.0",
    "click>=8.1.0",
    "tenacity>=8.5.0",
    "uv",
    "psutil>=5.9.0",
    "packaging>=24.0",
    "tomli>=2.0.0",
    "tomli_w>=1.0.0",
    "pyyaml>=6.0",
    "pip-audit",
    "duckduckgo-search>=6.0.0",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/Gangadhar24377/envio"
Repository = "https://github.com/Gangadhar24377/envio"
Issues = "https://github.com/Gangadhar24377/envio/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.32.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
envio = "envio.cli:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
]
ignore = [
    "E501",
    "E402",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = [
    "src/tests",
]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = [
    "src/envio",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "nul",
    ".venv",
    ".git",
    "dist",
]
